--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+@import url(normalize.css);
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -13,19 +14,313 @@
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  
   /* выше установили ограничения для секции */
+}
+.logo_place_header {
+  position: absolute;
+  width: 183px;
+  height: 32px;
+  top: 30px;
+  left: 64px;
+}
+.header__title {
+  align-items: center;
+  margin-left: 64px;
+  width: 730px;
+  line-height: 96px;
+  font-size: 102px;
+  font-weight: bold;
+  display: flex;
+}
+.header__subtitle {
+  width: 388px;
+  left: 64px;
+  bottom: 30px;
+  position: absolute;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  background-size: cover;
+  z-index: -1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  top: 64px;
+  right: 0;
+  position: absolute;
+  z-index: -2;
+}
+.two-columns {
+  width: 80%; 
+  display: flex;
+  margin: 100px auto;
+  justify-content: space-between;
+}
+.two-columns__brief {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+  
+}
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+  align-content: space-between;
+}
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: bold;
+}
+.section-title {
+  width: 60%;
+  margin-top: 100px;
+  margin: auto;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  
+  
+}
+.section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin-top: 20px;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+}
+.table {
+  width: 1100px;
+  margin: auto;
+  margin-bottom: 100px;
+  display: flex;
+  justify-content: space-around;
+  
+  
+}
+#table__cell th {
+  width: 250px;
+  padding-top: 60px;
+  text-align: left;
+
+  
+  }
+#table__cell td {
+  width: 250px;
+  padding-top: 20px;
+  text-align: left;
+  vertical-align: top;
 }
 
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  
+}
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  
+}
 /* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
+.table__celk _theme_dar {
   width: 200px;
   color: white;
   margin-right: 0;
   margin-top: 80px;
 }
+.feynman {
+  height: 890px;
+  position: relative;
+  
+}
+.feynman__img {
+  width: 867px;
+  height: 637px;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  z-index: -1;
+}
+.feynman__title {
+  width: 648px;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  margin: 0 auto;
+  padding-top: 100px;
+  text-align: center;
+  display: flex;
+  
+}
+.feynman__subtitle {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  margin: 70px auto 0;
+  display: flex;
+  justify-content: center;
+  
+}
+.feynman__link {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  top: 50%;
+  right: 48px;
+  color: #2f80ed;
+  position: absolute;
+}
+.section-title_theme_dark {
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+  color: white;
+  margin-top: 90px;
+  
+  
+}
+.kaufman {
+  background-color: #000000;
+  color: white;
+  overflow: hidden;
+  position: relative;
+  z-index: -2;
+
+}
+.section-subtitle_theme_dark {
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  color: white;
+}
+.table_theme_dark {
+  
+  margin: 80px auto;
+
+}
+.table__cell _theme_dar {
+  width: 200px;
+  color: white;
+  padding-top: 80px;
+  
+}
+.table__heading_theme_dark {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+.kaufman__triangle {
+  width: 877px;
+  height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  z-index: -1;
+}
+.footer {
+  min-height: 350px;
+  background-color: #000000;
+  color: white;
+  
+}
+.footer__columns {
+  width: 90%;
+  padding: 60px auto 40px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  min-height: 250px;
+
+  
+}
+.footer__column_content_copyright{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  
+  flex-basis: 711px;
+  
+  
+}
+.logo_place_footer {
+ width: 183px;
+ height: 35px;
+
+
+ 
+ 
+}
+.footer__author {
+  
+  padding-top: 18px;
+  padding-bottom: 18px;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__columns_content_info {
+  
+
+  
+
+}
+.footer__column-heading {
+  margin-bottom: 20px;
+  margin-top: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.footer__column-links {
+  margin-bottom: 16px;
+  line-height: 18px;
+  font-size: 18px;
+  font-weight: normal;
+}
+.footer__columns_content_social {
+  margin-bottom: 20px;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+.footer__column-link {
+  line-height: 10px;
+}
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
+}
+
