--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,4 @@
-@import url(normalize.css);
+
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -6,16 +6,17 @@
   max-width: 1600px;
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
+  
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
-
 .header {
+  background-color: #f2f2f2;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  
-  /* выше установили ограничения для секции */
+  position: relative;
+  z-index: -3;
+  display: flex;
 }
 .logo_place_header {
   position: absolute;
@@ -25,16 +26,20 @@
   left: 64px;
 }
 .header__title {
-  align-items: center;
+  margin: 0;
+  padding: 0;
   margin-left: 64px;
-  width: 730px;
+  max-width: 730px;
   line-height: 96px;
   font-size: 102px;
   font-weight: bold;
   display: flex;
+  align-items: center;
 }
 .header__subtitle {
-  width: 388px;
+  margin: 0;
+  padding: 0;
+  max-width: 388px;
   left: 64px;
   bottom: 30px;
   position: absolute;
@@ -42,17 +47,20 @@
   font-size: 18px;
   font-weight: normal;
 }
+.header__link {
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
 .header__main-illustration {
   width: 765px;
   height: 608px;
-  bottom: 0;
   right: 0;
+  bottom: 0;
   position: absolute;
   background-size: cover;
   z-index: -1;
 }
-
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
@@ -69,96 +77,84 @@
   justify-content: space-between;
 }
 .two-columns__brief {
+  margin: 0;
+  padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   color: #2f80ed;
-  
+  max-width: 175px;
 }
 .two-columns__main-text {
   width: 80%;
   min-width: 784px;
-  align-content: space-between;
+}
+.two-columns__main-text :last-of-type {
+  margin-bottom: 0;
 }
 .two-columns__paragraph {
+  margin: 0;
+  padding: 0;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
+  margin-bottom: 30px;
 }
 .two-columns__span-accent {
   line-height: 34px;
   font-size: 24px;
   font-weight: bold;
+  margin: 30px 0;
 }
 .section-title {
-  width: 60%;
-  margin-top: 100px;
-  margin: auto;
+  margin: 0;
+  padding: 0;
+  margin: 0 auto;
   line-height: 1.15;
   font-size: 60px;
-  font-weight: bold;
+  width: 60%;
   display: flex;
   justify-content: center;
-  
-  
 }
 .section-subtitle {
+  margin: 0;
+  padding: 0;
+  margin: 0 auto;
   width: 60%;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   margin-top: 20px;
-  margin: auto;
   display: flex;
   justify-content: center;
 }
 .table {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
   width: 1100px;
-  margin: auto;
-  margin-bottom: 100px;
+  margin: 0 auto;
   display: flex;
-  justify-content: space-around;
-  
-  
+  justify-content: space-between;
 }
-#table__cell th {
+.table__cell {
   width: 250px;
-  padding-top: 60px;
-  text-align: left;
-
-  
-  }
-#table__cell td {
-  width: 250px;
-  padding-top: 20px;
-  text-align: left;
-  vertical-align: top;
+  margin-top: 60px;
+  margin-bottom: 0;
 }
-
-
-.table__heading {
+.table__ heading {
   line-height: 1.15;
   font-size: 24px;
-  font-weight: bold;
-  
 }
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  
-}
-/* и элемента с модификатором вида ключ-значение */
-.table__celk _theme_dar {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+  padding-top: 20px;
 }
 .feynman {
-  height: 890px;
+  min-height: 890px;
   position: relative;
-  
 }
 .feynman__img {
   width: 867px;
@@ -169,7 +165,9 @@
   z-index: -1;
 }
 .feynman__title {
-  width: 648px;
+  margin: 0;
+  padding: 0;
+  max-width: 648px;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -177,16 +175,16 @@
   padding-top: 100px;
   text-align: center;
   display: flex;
-  
 }
 .feynman__subtitle {
+  margin: 0;
+  padding: 0;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
   margin: 70px auto 0;
   display: flex;
   justify-content: center;
-  
 }
 .feynman__link {
   line-height: 51px;
@@ -197,124 +195,119 @@
   color: #2f80ed;
   position: absolute;
 }
+.kaufman {
+  background-color: #000000;
+  color: white;
+  position: relative;
+  padding-top: 90px;
+  padding-bottom: 90px;
+  overflow: hidden;
+}
 .section-title_theme_dark {
   line-height: 1.15;
   font-size: 60px;
   font-weight: bold;
   color: white;
-  margin-top: 90px;
-  
-  
-}
-.kaufman {
-  background-color: #000000;
-  color: white;
-  overflow: hidden;
-  position: relative;
-  z-index: -2;
-
+  z-index: 3;
 }
 .section-subtitle_theme_dark {
-  line-height: 51px;
-  font-size: 36px;
+  margin-top: 20px;
+  line-height: 34px;
+  font-size: 24px;
   font-weight: normal;
   color: white;
+  z-index: 3;
 }
 .table_theme_dark {
-  
-  margin: 80px auto;
-
+  margin: 0 auto;
+  z-index: 3;
 }
-.table__cell _theme_dar {
+.table__cell_theme_dark {
   width: 200px;
   color: white;
-  padding-top: 80px;
-  
+  margin-top: 20px;
+  z-index: 3;
 }
 .table__heading_theme_dark {
   line-height: 1.15;
   font-size: 24px;
   font-weight: bold;
+  z-index: 3;
 }
 .table__text_theme_dark {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  z-index: 3;
 }
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   width: 877px;
-  height: 877px;
+  height: 877px; 
   position: absolute;
   top: 0;
   right: -210px;
-  z-index: -1;
+  object-fit: cover;
+  z-index: 2;
 }
 .footer {
   min-height: 350px;
   background-color: #000000;
   color: white;
-  
+  padding-top: 60px;
+  padding-bottom: 40px;
 }
 .footer__columns {
   width: 90%;
-  padding: 60px auto 40px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
-  min-height: 250px;
-
-  
+  min-height: 250px; 
 }
 .footer__column_content_copyright{
   width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  
-  flex-basis: 711px;
-  
-  
+  flex-basis: 711px; 
 }
 .logo_place_footer {
  width: 183px;
- height: 35px;
-
-
- 
- 
+ height: 35px; 
 }
 .footer__author {
-  
   padding-top: 18px;
   padding-bottom: 18px;
   line-height: 25px;
   font-size: 18px;
   font-weight: normal;
 }
-.footer__columns_content_info {
-  
-
-  
-
-}
 .footer__column-heading {
-  margin-bottom: 20px;
-  margin-top: 0;
+  margin: 0;
+  padding: 0;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
 }
 .footer__column-links {
+  margin-top: 20px;
   margin-bottom: 16px;
   line-height: 18px;
   font-size: 18px;
   font-weight: normal;
 }
 .footer__columns_content_social {
-  margin-bottom: 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin-bottom: 20px;
+  margin-top: 0;
+  display: flex;
+}
+.footer__list {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
 }
 .footer__column-link {
   line-height: 10px;
