--- a/styles/style.css
+++ b/styles/style.css
@@ -137,7 +137,7 @@
   width: 1100px;
   margin: 0 auto;
   display: flex;
-  align-items: flex-start;
+  justify-content: space-between;
   flex-wrap: wrap;
 }
 .table__cell {
@@ -146,6 +146,8 @@
   margin-bottom: 0;
 }
 .table__heading {
+  margin: 0;
+  padding: 0;
   line-height: 1.15;
   font-size: 24px;
 }
@@ -216,7 +218,7 @@
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
-  margin-top: 80px;
+  margin-top: 20px;
   color: white;
   z-index: 3;
 }
@@ -227,7 +229,7 @@
 .table__cell_theme_dark {
   width: 200px;
   color: white;
-  margin-top: 20px;
+  margin-top: 80px;
   z-index: 3;
 }
 .table__heading_theme_dark {
