--- a/styles/style.css
+++ b/styles/style.css
@@ -198,6 +198,7 @@
   right: 48px;
   color: #2f80ed;
   position: absolute;
+  text-decoration: none;
 }
 .kaufman {
   background-color: #1f1f1f;
@@ -315,6 +316,8 @@
 }
 .footer__column-link {
   line-height: 10px;
+  color: white;
+  text-decoration: none;
 }
 .footer__social-icon {
   width: 16px;
