Главные проблемы в обучение

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,4 +6,5 @@
     /* выше установили ограничение по максимальной ширине */
     margin: 0 auto;
     font-family: 'Helvetica Neue', Arial, sans-serif;
+}
   
