--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     line-height: 1.115;
-    font-size: 18px;
+    font-size: 24px;
+    font-weight: bold;
     text-align: center;
   }
