--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -2,4 +2,7 @@
     min-height: 890px;
     position: relative;
     padding-top: 100px;
+    background-color: #f2f2f2;
+    box-sizing: border-box;
+    z-index: -2;
   }
