--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,5 +1,7 @@
 .footer__column-link {
-    line-height: 10px;
+    line-height: 30px;
+    font-size: 18px;
+    font-weight: normal;
     color: white;
     text-decoration: none;
     opacity: 1;
