--- a/blocks/footer/__column-links/footer__column-links.css
+++ b/blocks/footer/__column-links/footer__column-links.css
@@ -1,7 +1,5 @@
 .footer__column-links {
-    margin-top: 20px;
-    margin-bottom: 16px;
-    line-height: 30px;
-    font-size: 18px;
-    font-weight: normal;
+    padding: 0;
+    margin: 20px 0 16px;
+    list-style-type: none;
   }
