--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -2,9 +2,9 @@
     background-image: url(../../../images/kaufman-triangle.svg);
     width: 877px;
     height: 877px;
+    background-size: cover;
     position: absolute;
     top: 0;
     right: -210px;
-    object-fit: cover;
     z-index: -1;
   }
