--- a/blocks/khan/khan.css
+++ b/blocks/khan/khan.css
@@ -1,3 +1,6 @@
 .khan {
-    margin: 105px auto 0;
+    margin: 0 auto;
+    padding-top: 105px;
+    background-color: #f2f2f2;
+    box-sizing: border-box;
   }
