--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,7 +1,9 @@
 .video__iframe {
     margin-right: 10px;
-    list-style-type: none;
     margin-bottom: -50px;
+    width: 515px;
+    height: 316px;
+    border: 0;
     z-index: 1;
   }
   .video__iframe:last-of-type {
