--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,6 +1,8 @@
 .resources__logo-zone {
-    margin: 80px auto 217px;
-    width: 1100;
+    list-style-type: none;
+    margin: 80px auto 0;
+    padding: 0 0 217px;
+    width: 1100px;
     display: flex;
     justify-content: center;
   }
