--- a/blocks/resources/__logo-zone/resources__logo-zone.css
+++ b/blocks/resources/__logo-zone/resources__logo-zone.css
@@ -1,7 +1,7 @@
 .resources__logo-zone {
     list-style-type: none;
     margin: 80px auto 0;
-    padding: 0 0 217px;
+    padding: 0;
     width: 1100px;
     display: flex;
     justify-content: center;
